Fix issue in activity view.

--- a/AnyWall/AnyWall-Info.plist
+++ b/AnyWall/AnyWall-Info.plist
@@ -27,7 +27,7 @@
 				<string>Default@2x.png</string>
 			</array>
 			<key>UIPrerenderedIcon</key>
-			<true/>
+			<false/>
 		</dict>
 	</dict>
 	<key>CFBundleIdentifier</key>
@@ -45,8 +45,6 @@
 	<key>CFBundleVersion</key>
 	<string>1.2</string>
 	<key>LSRequiresIPhoneOS</key>
-	<true/>
-	<key>UIPrerenderedIcon</key>
 	<true/>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
